changed some text in the header

--- a/public/index.html
+++ b/public/index.html
@@ -66,9 +66,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Sharina Stubbs</strong>, a <a href="https://github.com/SharinaS">software developer</a> with experience as a naturopathic doctor.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Sharina Stubbs</strong>, a <a href="https://github.com/SharinaS">software developer and a WA state licensed naturopathic doctor.</h2>
+								<p>I am a software developer with integrity, cheerful intelligence and grit. <br>I enjoy using code to deliver high quality results, while remaining accountable, collaborative and adaptable.  The best thing about programming is being able to create solutions for problems, then applying those solutions to other problems. After years of practice as a naturopathic doctor, I have high-level communication skills.</p>
 							</header>
 
 							<footer>
@@ -86,7 +85,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I am a software developer with integrity, cheerful intelligence and grit. I enjoy using code to deliver high quality results, while remaining accountable, collaborative and adaptable.  The best thing about programming is being able to create solutions for problems, then applying those solutions to other problems. After years of practice as a naturopathic doctor, I have high-level communication skills.</p>
+							<p>Put something cool here</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
