added images and some social links, changed text

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Sharina Stubbs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/reset.css" />
@@ -47,11 +47,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.instagram.com/sharina.programmer/?hl=enlinked" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
+							<li><a href="https://www.instagram.com/sharina.programmer/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/SharinaS?tab=repositories" class="icon fa-github"><span class="label">Github</span></a></li>
+							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<!-- <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li> -->
 						</ul>
 
 				</div>
@@ -66,12 +66,12 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Sharina Stubbs</strong>, a <a href="https://github.com/SharinaS">software developer and a WA state licensed naturopathic doctor.</h2>
-								<p>I am a software developer with integrity, cheerful intelligence and grit. <br>I enjoy using code to deliver high quality results, while remaining accountable, collaborative and adaptable.  The best thing about programming is being able to create solutions for problems, then applying those solutions to other problems. After years of practice as a naturopathic doctor, I have high-level communication skills.</p>
+								<h2 class="alt">I'm <strong>Sharina Stubbs</strong>, </br> a <a href="https://github.com/SharinaS">software developer</a> and a WA state licensed naturopathic doctor</h2>
+								<p> I enjoy delivering high quality results, while remaining accountable, collaborative and adaptable. </p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">See My Portfolio</a>
 							</footer>
 
 						</div>
@@ -85,20 +85,21 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Put something cool here</p>
+							<p>Programming allows me to solve problems, then apply those solutions to other complex problems. It allows me the opportunity to creatively build, tap into the imaginations of my team, and constantly learn.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://sharinas.github.io/seattle-earthquake/" class="image fit" target="_blank"><img src="images/earthquakeApp.JPG" alt="pic of the main page of an app, with a nav bar, seismic facts that scroll in the nav, and a title of Seattle Awareness: Getting Ready for the Big One" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Seattle Earthquake Awareness</h3>
+											<!-- <a href="https://github.com/SharinaS/seattle-earthquake" target="_blank"><button>See the Code</button></a> -->
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://github.com/SharinaS" class="image fit"><img src="images/gitHubRepo.JPG" alt="a screenshot of a github repo, which lists different projects and has a picture of a brown haired woman with green eyes" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>My Code Contributions on GitHub</h3>
 										</header>
 									</article>
 								</div>
@@ -118,9 +119,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://www.linkedin.com/in/sharina-stubbs/" class="image fit" target="_blank"><img src="images/laptopWork.jpg" alt="angled view of the hands of a developer working on a mac laptop" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Find Me on LinkedIn</h3>
 										</header>
 									</article>
 									<article class="item">
