--- a/public/index.html
+++ b/public/index.html
@@ -107,13 +107,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Future Amazing Project</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Future Cool Project</h3>
 										</header>
 									</article>
 								</div>
@@ -127,7 +127,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Future Fascinating Project</h3>
 										</header>
 									</article>
 								</div>
@@ -144,14 +144,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="https://www.linkedin.com/in/sharina-stubbs/" class="image featured"><img src="images/bridge.jpg" alt="black and white pic of a small suspension bridge hanging over a river amidst evergreens" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>"My name is Sharina Stubbs and I’m a software developer. I'm also an experienced naturopathic doctor. I specialized in integrative primary care for six years prior to learning how to code. Every day, I felt like I was in battle with the system to not just achieve the best care for my patients, but to also survive in a broken medical system. I’m a software developer now so I can design and build solutions on a large, if not global scale, so I can tackle complex problems, and be on the cutting edge of new technologies. Solving problems creatively and proactively with a team, in a fast-moving environment brings out the best in me. I really enjoy writing clean and powerful code, and taking ownership for the project I’m part of. I’ve found that my background in identifying patterns within systems, my trained skills in communication, and my enjoyment of learning have all been a powerful asset to being a software developer and working with a team." </p>
 
 						</div>
 					</section>
@@ -164,10 +159,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>I am interested and open to professional opportunities as a software developer in the greater Seattle area.</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -192,7 +184,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">Sharina Stubbs and HTML5 UP</a></li>
 					</ul>
 
 			</div>
