changed hamburger menu to static menu for tablet view and changed background image to background movie

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
 		<link rel="stylesheet" href="assets/css/layout.css" />
 		<link rel="stylesheet" href="assets/css/state.css" />
 		<link rel="stylesheet" href="assets/css/modules.css" />
-		
 
 	</head>
 	<body class="is-preload">
@@ -60,11 +59,14 @@
 
 		<!-- Main -->
 			<div id="main">
+					<video id="videoBG" autoplay muted loop >
+							<source src="images/Earth_Zoom_In.mov" type="video/mp4">
+					</video>
 
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
 						<div class="container">
-
+							
 							<header>
 								<h2 class="alt">I'm <strong>Sharina Stubbs</strong>, </br> a <a href="https://github.com/SharinaS">software developer</a> and a WA state licensed naturopathic doctor</h2>
 								<p> I enjoy delivering high quality results, while remaining accountable, collaborative and adaptable. </p>
@@ -191,13 +193,13 @@
 
 		<!-- Scripts -->
 			
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollex/0.2.1/jquery.scrollex.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/javascript.util/0.12.12/javascript.util.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/web-starter-kit/0.2.0-beta/styles/main.min.css"></script>
-
+			<script src="assets/js/main.js"></script>
 	</body>
 </html>
